--- a/package.json
+++ b/package.json
@@ -10,21 +10,38 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@octokit/rest": "^21.1.0",
+    "@octokit/types": "^13.7.0",
+    "@tanstack/react-query": "^4.18.0",
+    "@trpc/client": "^10.45.2",
+    "@trpc/next": "^10.45.2",
+    "@trpc/react-query": "^10.45.2",
+    "@trpc/server": "^10.45.2",
+    "axios": "^1.7.9",
+    "cheerio": "^1.0.0",
     "clsx": "^2.1.1",
+    "eipw-lint-js": "^0.9.0",
+    "ethers": "^6.13.5",
+    "express": "^4.21.2",
     "mini-svg-data-uri": "^1.4.4",
+    "mongoose": "^8.9.5",
     "motion": "^12.0.5",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
+    "node-fetch": "^3.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-lottie": "^1.2.10",
+    "superjson": "^2.2.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.172.0"
+    "three": "^0.172.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/express": "^5.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
