--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.2.0",
     "@octokit/rest": "^21.1.0",
     "@octokit/types": "^13.7.0",
+    "@tabler/icons-react": "^3.31.0",
     "@tanstack/react-query": "^4.18.0",
     "@trpc/client": "^10.45.2",
     "@trpc/next": "^10.45.2",
@@ -20,9 +21,12 @@
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
     "clsx": "^2.1.1",
+    "echarts-for-react": "^3.0.2",
     "eipw-lint-js": "^0.9.0",
     "ethers": "^6.13.5",
     "express": "^4.21.2",
+    "file-saver": "^2.0.5",
+    "lucide-react": "^0.484.0",
     "mini-svg-data-uri": "^1.4.4",
     "mongoose": "^8.9.5",
     "motion": "^12.0.5",
