--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.2.0",
     "@octokit/rest": "^21.1.0",
     "@octokit/types": "^13.7.0",
+    "@react-three/fiber": "^9.1.0",
     "@tabler/icons-react": "^3.31.0",
     "@tanstack/react-query": "^4.18.0",
     "@trpc/client": "^10.45.2",
@@ -29,7 +30,7 @@
     "lucide-react": "^0.484.0",
     "mini-svg-data-uri": "^1.4.4",
     "mongoose": "^8.9.5",
-    "motion": "^12.0.5",
+    "motion": "^12.6.0",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "node-fetch": "^3.3.2",
