--- a/package.json
+++ b/package.json
@@ -16,15 +16,19 @@
     "@mynaui/icons-react": "^0.3.3",
     "@octokit/rest": "^21.1.0",
     "@octokit/types": "^13.7.0",
+    "@radix-ui/react-avatar": "^1.1.7",
+    "@radix-ui/react-tabs": "^1.1.9",
     "@react-three/fiber": "^9.1.0",
     "@tabler/icons-react": "^3.31.0",
     "@tanstack/react-query": "^4.18.0",
+    "@tanstack/react-table": "^8.21.3",
     "@trpc/client": "^10.45.2",
     "@trpc/next": "^10.45.2",
     "@trpc/react-query": "^10.45.2",
     "@trpc/server": "^10.45.2",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "echarts-for-react": "^3.0.2",
     "eipw-lint-js": "^0.9.0",
