feat: add EIPTypeCharts and StackedColumnChart components for visualizing EIP data
- Introduced EIPTypeCharts component to display various EIP categories using StatusColumnChart.
- Added StackedColumnChart component to visualize EIP counts by category and year.
- Implemented pagination in CatTable component to limit rows displayed per page.
- Created StatusTable and typeTable components for displaying EIP status and type data with filtering and sorting capabilities.
- Developed a custom Select component for improved user interaction in filtering data.
- Enhanced CSV download functionality across components for better data export options.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@octokit/rest": "^21.1.0",
     "@octokit/types": "^13.7.0",
     "@radix-ui/react-avatar": "^1.1.7",
+    "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.9",
     "@react-three/fiber": "^9.1.0",
