--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mynaui/icons-react": "^0.3.3",
     "@octokit/rest": "^21.1.0",
     "@octokit/types": "^13.7.0",
+    "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slot": "^1.2.0",
