--- a/package.json
+++ b/package.json
@@ -18,9 +18,15 @@
     "@octokit/types": "^13.7.0",
     "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-avatar": "^1.1.7",
+    "@radix-ui/react-checkbox": "^1.2.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.12",
+    "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-select": "^2.2.2",
+    "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.9",
+    "@radix-ui/react-toast": "^1.2.11",
+    "@radix-ui/react-tooltip": "^1.2.4",
     "@react-three/fiber": "^9.1.0",
     "@tabler/icons-react": "^3.31.0",
     "@tanstack/react-query": "^4.18.0",
@@ -33,6 +39,7 @@
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "echarts-for-react": "^3.0.2",
     "eipw-lint-js": "^0.9.0",
     "ethers": "^6.13.5",
@@ -43,13 +50,21 @@
     "mongoose": "^8.9.5",
     "motion": "^12.6.0",
     "next": "15.1.6",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^6.10.1",
     "react": "^19.0.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^19.0.0",
+    "react-feather": "^2.0.10",
     "react-icons": "^5.4.0",
     "react-lottie": "^1.2.10",
+    "react-markdown": "^10.1.0",
     "react-scroll": "^1.9.3",
+    "react-syntax-highlighter": "^15.6.1",
+    "remark-gfm": "^4.0.1",
+    "stripe": "^18.0.0",
     "superjson": "^2.2.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
@@ -59,10 +74,14 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/express": "^5.0.0",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
+    "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^19",
     "@types/react-lottie": "^1.2.10",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/three": "^0.172.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
